# shark_tkinter_lib

./: .gitignore  LICENSE  README.md  pyproject.toml
src/shark_tkinter_lib/: tkinter_widgets.py
